remove knowledge extension remove cyber extension replace elasticsearch with opensearch