@@ -52,4 +52,4 @@ if not "!elasticsearchClusterName!"=="" (
 )
 
 echo java -Xmx!heapSize! -Xms!heapSize! !systemProperties! !debugParams! -cp %classPath% %mainClass% !configFile! !activeProfile! !logbackConfigurationFilename!
-java -Xmx!heapSize! -Xms!heapSize! !systemProperties! !debugParams! -cp %classPath% %mainClass% !configFile! !activeProfile! !logbackConfigurationFilename!
+java --illegal-access=warn -Xmx!heapSize! -Xms!heapSize! !systemProperties! !debugParams! -cp %classPath% %mainClass% !configFile! !activeProfile! !logbackConfigurationFilename!
